# gyst_api

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  django.yml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
gyst/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
gyst/gyst/: urls.py  wsgi.py
habit/: admin.py  apps.py  models.py
habits/: admin.py  filters.py  models.py  routers.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
schedule/: models.py
schedule/models/: habbit_abstract.py  habbit_day.py  habbit_schedule.py
